--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <body>
 	<div id='graph'><!-- Plotly chart will be drawn inside this DIV --></div>
+	<div id="message">Select a date</div>
     <input type="text" id="datepicker">
+   	<div id="invalid"></div>
   </body>
 </html> 
